fix: update default args value to an empty string in action.yml

--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   args:
     description: 'Arguments to pass to gomarklint'
     required: false
-    default: '.'
+    default: ''
 runs:
   using: 'docker'
   image: 'Dockerfile'
